# mini-nas

./: Cargo.toml  archive.txt  cookie.txt  test.html  todo.txt
src/: main.rs
web/: explorer.html  index.html  login.html  player.html  upload.html  videojs.css  videojs.js
