[package]
name = "mini-nas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
actix-web = "4"
actix-files = "0.6.2"
rand = "0.8.5"
actix-multipart = "0.6.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-identity = "0.5.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
byte-unit = "4.0.19"
walkdir = "2.3.3"
clearscreen = "2.0.1"
infer = "0.14.0"
